style.css
body {
    margin: 0;
    color: #eaeaea;
    background-color: #090909;
    font-family: monospace;
    font-size: 14px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    overflow-y: overlay;
}

#container {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    width: 100%;
    padding: 64px;
    box-sizing: border-box;
}

#main {
    /* position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); */
    width: 100%;
    max-width: max-content;
}
.center {
    text-align: center;
}
a {
    text-decoration: none;
    color: #F98B8B
}
a:hover {
    color: #FA9E9E;
    text-decoration: underline;
}
img {
    display: block;
    margin: auto;
    width: 128px;
    height: 128px;
    object-fit: cover;
    background-color: rgba(255,255,255,0.1);
    border-radius: 512px;
    -webkit-user-drag: none;
    -moz-user-drag: none;
    -ms-user-drag: none;
    -user-drag: none;
    box-shadow: 0px 0px 16px rgba(0,0,0,0.25);
}

.column {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: fit-content;
    height: max-content;
    margin-bottom: 16px;
    float: none;
}

.auto-indent {
  padding-left: 32px;
  text-indent: -32px;
}

span {
  color: #5C95FF;
}

